Run Jupyter notebooks

--- a/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -517,7 +517,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>datetime</th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Universal Time</th>\n",
        "      <th>x_ksm</th>\n",
        "      <th>y_ksm</th>\n",
@@ -667,18 +667,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         datetime      Universal Time       x_ksm        y_ksm       z_ksm  \\\n",
-       "0               0 2004-01-01 00:00:00  664.545415 -1282.271820 -134.013894   \n",
-       "1               1 2004-01-01 00:01:00  664.542412 -1282.267682 -134.011330   \n",
-       "2               2 2004-01-01 00:02:00  664.539410 -1282.263543 -134.008771   \n",
-       "3               3 2004-01-01 00:03:00  664.536407 -1282.259404 -134.006218   \n",
-       "4               4 2004-01-01 00:04:00  664.533404 -1282.255265 -134.003670   \n",
-       "...           ...                 ...         ...          ...         ...   \n",
-       "7209352   7209352 2017-09-15 11:52:00   -0.092238     0.399237    0.032108   \n",
-       "7209353   7209353 2017-09-15 11:53:00   -0.115321     0.401941    0.042341   \n",
-       "7209354   7209354 2017-09-15 11:54:00   -0.138326     0.404378    0.052547   \n",
-       "7209355   7209355 2017-09-15 11:55:00   -0.161239     0.406547    0.062719   \n",
-       "7209356   7209356 2017-09-15 11:56:00   -0.184044     0.408446    0.072851   \n",
+       "         Unnamed: 0      Universal Time       x_ksm        y_ksm       z_ksm  \\\n",
+       "0                 0 2004-01-01 00:00:00  664.545415 -1282.271820 -134.013894   \n",
+       "1                 1 2004-01-01 00:01:00  664.542412 -1282.267682 -134.011330   \n",
+       "2                 2 2004-01-01 00:02:00  664.539410 -1282.263543 -134.008771   \n",
+       "3                 3 2004-01-01 00:03:00  664.536407 -1282.259404 -134.006218   \n",
+       "4                 4 2004-01-01 00:04:00  664.533404 -1282.255265 -134.003670   \n",
+       "...             ...                 ...         ...          ...         ...   \n",
+       "7209352     7209352 2017-09-15 11:52:00   -0.092238     0.399237    0.032108   \n",
+       "7209353     7209353 2017-09-15 11:53:00   -0.115321     0.401941    0.042341   \n",
+       "7209354     7209354 2017-09-15 11:54:00   -0.138326     0.404378    0.052547   \n",
+       "7209355     7209355 2017-09-15 11:55:00   -0.161239     0.406547    0.062719   \n",
+       "7209356     7209356 2017-09-15 11:56:00   -0.184044     0.408446    0.072851   \n",
        "\n",
        "            subLat      subLon    subLST        R_ksm  \n",
        "0       -19.815933   78.646614  7.525833  1450.448673  \n",
@@ -769,7 +769,7 @@
        "      <th>21.4779</th>\n",
        "      <th>...</th>\n",
        "      <th>Universal Time</th>\n",
-       "      <th>datetime</th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>x_ksm</th>\n",
        "      <th>y_ksm</th>\n",
        "      <th>z_ksm</th>\n",
@@ -1064,18 +1064,18 @@
        "2403117     NaN     NaN     NaN     NaN     NaN      NaN      NaN      NaN   \n",
        "2403118     NaN     NaN     NaN     NaN     NaN      NaN      NaN      NaN   \n",
        "\n",
-       "         17.796801  21.4779  ...      Universal Time  datetime       x_ksm  \\\n",
-       "0              NaN      NaN  ... 2004-01-01 00:00:00         0  664.545415   \n",
-       "1              NaN      NaN  ... 2004-01-01 00:03:00         3  664.536407   \n",
-       "2              NaN      NaN  ... 2004-01-01 00:06:00         6  664.527398   \n",
-       "3              NaN      NaN  ... 2004-01-01 00:09:00         9  664.518389   \n",
-       "4              NaN      NaN  ... 2004-01-01 00:12:00        12  664.509381   \n",
-       "...            ...      ...  ...                 ...       ...         ...   \n",
-       "2403114        NaN      NaN  ... 2017-09-15 11:42:00   7209342    0.139428   \n",
-       "2403115        NaN      NaN  ... 2017-09-15 11:45:00   7209345    0.070198   \n",
-       "2403116        NaN      NaN  ... 2017-09-15 11:48:00   7209348    0.000552   \n",
-       "2403117        NaN      NaN  ... 2017-09-15 11:51:00   7209351   -0.069095   \n",
-       "2403118        NaN      NaN  ... 2017-09-15 11:54:00   7209354   -0.138326   \n",
+       "         17.796801  21.4779  ...      Universal Time  Unnamed: 0       x_ksm  \\\n",
+       "0              NaN      NaN  ... 2004-01-01 00:00:00           0  664.545415   \n",
+       "1              NaN      NaN  ... 2004-01-01 00:03:00           3  664.536407   \n",
+       "2              NaN      NaN  ... 2004-01-01 00:06:00           6  664.527398   \n",
+       "3              NaN      NaN  ... 2004-01-01 00:09:00           9  664.518389   \n",
+       "4              NaN      NaN  ... 2004-01-01 00:12:00          12  664.509381   \n",
+       "...            ...      ...  ...                 ...         ...         ...   \n",
+       "2403114        NaN      NaN  ... 2017-09-15 11:42:00     7209342    0.139428   \n",
+       "2403115        NaN      NaN  ... 2017-09-15 11:45:00     7209345    0.070198   \n",
+       "2403116        NaN      NaN  ... 2017-09-15 11:48:00     7209348    0.000552   \n",
+       "2403117        NaN      NaN  ... 2017-09-15 11:51:00     7209351   -0.069095   \n",
+       "2403118        NaN      NaN  ... 2017-09-15 11:54:00     7209354   -0.138326   \n",
        "\n",
        "               y_ksm       z_ksm     subLat      subLon    subLST  \\\n",
        "0       -1282.271820 -134.013894 -19.815933   78.646614  7.525833   \n",
@@ -1133,9 +1133,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_59235/1511130122.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_66442/1511130122.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df_mean = df_all.groupby('local_time').mean()\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_59235/1511130122.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_66442/1511130122.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df_median = df_all.groupby('local_time').median()\n"
      ]
     }
